[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/55 sin título_20220708093835.png" type="Texture" id=1]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main Resources/Fuentes/PKMN RBYGSC.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Escenas/Interfaces/PopUPS/info/pop_up_info_level.gd" type="Script" id=4]
[ext_resource path="res://Main Resources/Fuentes/rainyhearts.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/27 sin título_20220708111320.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("window:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.31864 ),
"update": 0,
"values": [ Vector2( 13, 7 ), Vector2( 365, 202 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("window:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.31864 ),
"update": 0,
"values": [ Vector2( 176, 97.5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../background:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.31864 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.509804 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("tittle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.195, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("nivel_tittle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.194, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:X")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.182, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("text_attemps:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("text_progrees:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("button:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="pop_up_info_level" type="CanvasLayer"]
layer = 7
script = ExtResource( 4 )
X = false

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.00693401 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = -101.0
margin_right = 182.5
margin_bottom = 101.0
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.74532
margin_top = -4.18987
margin_right = 7.74532
margin_bottom = 4.18988
texture = ExtResource( 1 )
expand = true

[node name="tittle" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 0.996078, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Level Stats"
align = 1
valign = 1

[node name="nivel_tittle" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -47.0
margin_right = 136.5
margin_bottom = -29.0
custom_colors/font_color = Color( 0.929412, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "titulo nivel"
align = 1
valign = 1
clip_text = true

[node name="text_progrees" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.5
margin_top = -12.0
margin_right = 75.5
margin_bottom = 6.0
custom_colors/font_color = Color( 1, 0, 0.721569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Progreso:"
valign = 1
clip_text = true

[node name="porcent" type="ProgressBar" parent="Control/text_progrees"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -7.0
margin_right = 1.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )

[node name="text_attemps" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = 4.0
margin_right = 122.5
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 1, 0.113725, 1 )
custom_fonts/font = SubResource( 4 )
text = "Intentos totales:"
valign = 1
clip_text = true

[node name="number" type="Label" parent="Control/text_attemps"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -7.0
margin_right = 1.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1

[node name="button" type="TextureRect" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -72.0
margin_right = 48.0
margin_bottom = -20.0
texture = ExtResource( 6 )

[node name="anim" type="AnimationPlayer" parent="Control"]
autoplay = "appear"
anims/appear = SubResource( 2 )
